gen/grammar/GrammarGrammarParser.java
// Generated from /home/qrort/hw/mt/lab3/src/grammar/GrammarGrammar.g4 by ANTLR 4.8
package grammar;

    import java.util.*;
    import templates.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, WHITESPACE=2, TOKENS=3, RULES=4, NAME=5, BLANKS=6, STARTS=7, ATTR=8, 
		SIGN=9, FUNC=10, DCOLON=11, TERM=12, NTERM=13, REGEX=14, LB=15, RB=16, 
		CODE=17, LBS=18, RBS=19, QUOTE=20, SEMICOLON=21, VERT=22, COMMA=23;
	public static final int
		RULE_start = 0, RULE_signs = 1, RULE_sign = 2, RULE_funcs = 3, RULE_name = 4, 
		RULE_blanks = 5, RULE_startS = 6, RULE_attrs = 7, RULE_attr = 8, RULE_lexems = 9, 
		RULE_nextLexem = 10, RULE_rules = 11, RULE_nextRule = 12, RULE_ruleContent = 13, 
		RULE_ruleContentContinuation = 14, RULE_ruleInstance = 15, RULE_tokenSequence = 16, 
		RULE_tokenInstance = 17, RULE_codeValue = 18, RULE_attrValue = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "signs", "sign", "funcs", "name", "blanks", "startS", "attrs", 
			"attr", "lexems", "nextLexem", "rules", "nextRule", "ruleContent", "ruleContentContinuation", 
			"ruleInstance", "tokenSequence", "tokenInstance", "codeValue", "attrValue"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", null, "'@tokens'", "'@rules'", "'@name'", "'@blank'", "'@start'", 
			"'@returns'", "'@signatures'", "'@functions'", "'::'", null, null, null, 
			"'{'", "'}'", null, "'('", "')'", "'\"'", "';'", "'|'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "WHITESPACE", "TOKENS", "RULES", "NAME", "BLANKS", "STARTS", 
			"ATTR", "SIGN", "FUNC", "DCOLON", "TERM", "NTERM", "REGEX", "LB", "RB", 
			"CODE", "LBS", "RBS", "QUOTE", "SEMICOLON", "VERT", "COMMA"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GrammarGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public GrammarHolder val = new GrammarHolder();
		public NameContext name;
		public BlanksContext blanks;
		public StartSContext startS;
		public AttrsContext attrs;
		public LexemsContext lexems;
		public SignsContext signs;
		public FuncsContext funcs;
		public RulesContext rules;
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public BlanksContext blanks() {
			return getRuleContext(BlanksContext.class,0);
		}
		public StartSContext startS() {
			return getRuleContext(StartSContext.class,0);
		}
		public AttrsContext attrs() {
			return getRuleContext(AttrsContext.class,0);
		}
		public LexemsContext lexems() {
			return getRuleContext(LexemsContext.class,0);
		}
		public SignsContext signs() {
			return getRuleContext(SignsContext.class,0);
		}
		public FuncsContext funcs() {
			return getRuleContext(FuncsContext.class,0);
		}
		public RulesContext rules() {
			return getRuleContext(RulesContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GrammarGrammarParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGrammarListener ) ((GrammarGrammarListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGrammarListener ) ((GrammarGrammarListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarGrammarVisitor ) return ((GrammarGrammarVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			((StartContext)_localctx).name = name();
			setState(41);
			((StartContext)_localctx).blanks = blanks();
			setState(42);
			((StartContext)_localctx).startS = startS();
			setState(43);
			((StartContext)_localctx).attrs = attrs();
			setState(44);
			((StartContext)_localctx).lexems = lexems();
			setState(45);
			((StartContext)_localctx).signs = signs();
			setState(46);
			((StartContext)_localctx).funcs = funcs();
			setState(47);
			((StartContext)_localctx).rules = rules();
			setState(48);
			match(EOF);

			        _localctx.val.setBlanks(((StartContext)_localctx).blanks.reg);
			        _localctx.val.setStart(((StartContext)_localctx).startS.val);
			        _localctx.val.setAttr(((StartContext)_localctx).attrs.vals);
			        _localctx.val.setName(((StartContext)_localctx).name.value);
			        _localctx.val.addTokens(((StartContext)_localctx).lexems.toks);
			        _localctx.val.setSigns(((StartContext)_localctx).signs.vals);
			        _localctx.val.addFuncs(((StartContext)_localctx).funcs.val);
			        _localctx.val.addRules(((StartContext)_localctx).rules.ruls);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SignsContext extends ParserRuleContext {
		public ArrayList<String> vals = new ArrayList<>();
		public SignContext s;
		public TerminalNode SIGN() { return getToken(GrammarGrammarParser.SIGN, 0); }
		public TerminalNode LB() { return getToken(GrammarGrammarParser.LB, 0); }
		public TerminalNode RB() { return getToken(GrammarGrammarParser.RB, 0); }
		public List<SignContext> sign() {
			return getRuleContexts(SignContext.class);
		}
		public SignContext sign(int i) {
			return getRuleContext(SignContext.class,i);
		}
		public SignsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_signs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGrammarListener ) ((GrammarGrammarListener)listener).enterSigns(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGrammarListener ) ((GrammarGrammarListener)listener).exitSigns(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarGrammarVisitor ) return ((GrammarGrammarVisitor<? extends T>)visitor).visitSigns(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SignsContext signs() throws RecognitionException {
		SignsContext _localctx = new SignsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_signs);
		int _la;
		try {
			setState(63);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SIGN:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(51);
				match(SIGN);
				setState(52);
				match(LB);
				setState(56); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(53);
					((SignsContext)_localctx).s = sign();
					_localctx.vals.add(((SignsContext)_localctx).s.val);
					}
					}
					setState(58); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NTERM );
				setState(60);
				match(RB);
				}
				}
				break;
			case RULES:
			case FUNC:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SignContext extends ParserRuleContext {
		public String val;
		public Token NTERM;
		public AttrValueContext attrValue;
		public TerminalNode NTERM() { return getToken(GrammarGrammarParser.NTERM, 0); }
		public AttrValueContext attrValue() {
			return getRuleContext(AttrValueContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(GrammarGrammarParser.SEMICOLON, 0); }
		public SignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGrammarListener ) ((GrammarGrammarListener)listener).enterSign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGrammarListener ) ((GrammarGrammarListener)listener).exitSign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarGrammarVisitor ) return ((GrammarGrammarVisitor<? extends T>)visitor).visitSign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SignContext sign() throws RecognitionException {
		SignContext _localctx = new SignContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			((SignContext)_localctx).NTERM = match(NTERM);
			setState(66);
			((SignContext)_localctx).attrValue = attrValue();
			setState(67);
			match(SEMICOLON);

			        ((SignContext)_localctx).val =  (((SignContext)_localctx).NTERM!=null?((SignContext)_localctx).NTERM.getText():null) + ((SignContext)_localctx).attrValue.value.toString();
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncsContext extends ParserRuleContext {
		public String val;
		public Token CODE;
		public TerminalNode FUNC() { return getToken(GrammarGrammarParser.FUNC, 0); }
		public TerminalNode CODE() { return getToken(GrammarGrammarParser.CODE, 0); }
		public FuncsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGrammarListener ) ((GrammarGrammarListener)listener).enterFuncs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGrammarListener ) ((GrammarGrammarListener)listener).exitFuncs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarGrammarVisitor ) return ((GrammarGrammarVisitor<? extends T>)visitor).visitFuncs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncsContext funcs() throws RecognitionException {
		FuncsContext _localctx = new FuncsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_funcs);
		try {
			setState(74);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FUNC:
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				match(FUNC);
				setState(71);
				((FuncsContext)_localctx).CODE = match(CODE);

				        ((FuncsContext)_localctx).val =  (((FuncsContext)_localctx).CODE!=null?((FuncsContext)_localctx).CODE.getText():null);
				    
				}
				break;
			case RULES:
				enterOuterAlt(_localctx, 2);
				{

				        ((FuncsContext)_localctx).val =  "";
				    
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public String value;
		public Token NTERM;
		public TerminalNode NAME() { return getToken(GrammarGrammarParser.NAME, 0); }
		public TerminalNode LB() { return getToken(GrammarGrammarParser.LB, 0); }
		public TerminalNode NTERM() { return getToken(GrammarGrammarParser.NTERM, 0); }
		public TerminalNode RB() { return getToken(GrammarGrammarParser.RB, 0); }
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGrammarListener ) ((GrammarGrammarListener)listener).enterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGrammarListener ) ((GrammarGrammarListener)listener).exitName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarGrammarVisitor ) return ((GrammarGrammarVisitor<? extends T>)visitor).visitName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(NAME);
			setState(77);
			match(LB);
			setState(78);
			((NameContext)_localctx).NTERM = match(NTERM);
			setState(79);
			match(RB);

			        ((NameContext)_localctx).value =  (((NameContext)_localctx).NTERM!=null?((NameContext)_localctx).NTERM.getText():null);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlanksContext extends ParserRuleContext {
		public String reg;
		public Token REGEX;
		public TerminalNode BLANKS() { return getToken(GrammarGrammarParser.BLANKS, 0); }
		public TerminalNode LB() { return getToken(GrammarGrammarParser.LB, 0); }
		public TerminalNode REGEX() { return getToken(GrammarGrammarParser.REGEX, 0); }
		public TerminalNode RB() { return getToken(GrammarGrammarParser.RB, 0); }
		public BlanksContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blanks; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGrammarListener ) ((GrammarGrammarListener)listener).enterBlanks(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGrammarListener ) ((GrammarGrammarListener)listener).exitBlanks(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarGrammarVisitor ) return ((GrammarGrammarVisitor<? extends T>)visitor).visitBlanks(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlanksContext blanks() throws RecognitionException {
		BlanksContext _localctx = new BlanksContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_blanks);
		try {
			setState(88);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BLANKS:
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				match(BLANKS);
				setState(83);
				match(LB);
				setState(84);
				((BlanksContext)_localctx).REGEX = match(REGEX);
				setState(85);
				match(RB);

				        ((BlanksContext)_localctx).reg =  (((BlanksContext)_localctx).REGEX!=null?((BlanksContext)_localctx).REGEX.getText():null);
				    
				}
				break;
			case STARTS:
				enterOuterAlt(_localctx, 2);
				{

				        ((BlanksContext)_localctx).reg =  "";
				    
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartSContext extends ParserRuleContext {
		public String val;
		public Token NTERM;
		public TerminalNode STARTS() { return getToken(GrammarGrammarParser.STARTS, 0); }
		public TerminalNode LB() { return getToken(GrammarGrammarParser.LB, 0); }
		public TerminalNode NTERM() { return getToken(GrammarGrammarParser.NTERM, 0); }
		public TerminalNode RB() { return getToken(GrammarGrammarParser.RB, 0); }
		public StartSContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_startS; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGrammarListener ) ((GrammarGrammarListener)listener).enterStartS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGrammarListener ) ((GrammarGrammarListener)listener).exitStartS(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarGrammarVisitor ) return ((GrammarGrammarVisitor<? extends T>)visitor).visitStartS(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartSContext startS() throws RecognitionException {
		StartSContext _localctx = new StartSContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_startS);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(STARTS);
			setState(91);
			match(LB);
			setState(92);
			((StartSContext)_localctx).NTERM = match(NTERM);
			setState(93);
			match(RB);

			        ((StartSContext)_localctx).val =  (((StartSContext)_localctx).NTERM!=null?((StartSContext)_localctx).NTERM.getText():null);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttrsContext extends ParserRuleContext {
		public ArrayList <String> vals = new ArrayList<>();
		public AttrContext ai;
		public TerminalNode ATTR() { return getToken(GrammarGrammarParser.ATTR, 0); }
		public TerminalNode LB() { return getToken(GrammarGrammarParser.LB, 0); }
		public TerminalNode RB() { return getToken(GrammarGrammarParser.RB, 0); }
		public List<AttrContext> attr() {
			return getRuleContexts(AttrContext.class);
		}
		public AttrContext attr(int i) {
			return getRuleContext(AttrContext.class,i);
		}
		public AttrsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attrs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGrammarListener ) ((GrammarGrammarListener)listener).enterAttrs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGrammarListener ) ((GrammarGrammarListener)listener).exitAttrs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarGrammarVisitor ) return ((GrammarGrammarVisitor<? extends T>)visitor).visitAttrs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttrsContext attrs() throws RecognitionException {
		AttrsContext _localctx = new AttrsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_attrs);
		int _la;
		try {
			setState(108);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ATTR:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(96);
				match(ATTR);
				setState(97);
				match(LB);
				setState(101); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(98);
					((AttrsContext)_localctx).ai = attr();
					 _localctx.vals.add(((AttrsContext)_localctx).ai.v1); _localctx.vals.add(((AttrsContext)_localctx).ai.v2);
					}
					}
					setState(103); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NTERM );
				setState(105);
				match(RB);
				}
				}
				break;
			case TOKENS:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttrContext extends ParserRuleContext {
		public String v1;
		public String v2;
		public Token NTERM;
		public Token REGEX;
		public TerminalNode NTERM() { return getToken(GrammarGrammarParser.NTERM, 0); }
		public TerminalNode REGEX() { return getToken(GrammarGrammarParser.REGEX, 0); }
		public TerminalNode SEMICOLON() { return getToken(GrammarGrammarParser.SEMICOLON, 0); }
		public AttrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGrammarListener ) ((GrammarGrammarListener)listener).enterAttr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGrammarListener ) ((GrammarGrammarListener)listener).exitAttr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarGrammarVisitor ) return ((GrammarGrammarVisitor<? extends T>)visitor).visitAttr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttrContext attr() throws RecognitionException {
		AttrContext _localctx = new AttrContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_attr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			((AttrContext)_localctx).NTERM = match(NTERM);
			setState(111);
			match(T__0);
			setState(112);
			((AttrContext)_localctx).REGEX = match(REGEX);
			setState(113);
			match(SEMICOLON);

			        ((AttrContext)_localctx).v1 =  (((AttrContext)_localctx).NTERM!=null?((AttrContext)_localctx).NTERM.getText():null);
			        ((AttrContext)_localctx).v2 =  (((AttrContext)_localctx).REGEX!=null?((AttrContext)_localctx).REGEX.getText():null);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LexemsContext extends ParserRuleContext {
		public ArrayList<MyToken> toks = new ArrayList<>();
		public NextLexemContext li;
		public TerminalNode TOKENS() { return getToken(GrammarGrammarParser.TOKENS, 0); }
		public TerminalNode LB() { return getToken(GrammarGrammarParser.LB, 0); }
		public TerminalNode RB() { return getToken(GrammarGrammarParser.RB, 0); }
		public List<NextLexemContext> nextLexem() {
			return getRuleContexts(NextLexemContext.class);
		}
		public NextLexemContext nextLexem(int i) {
			return getRuleContext(NextLexemContext.class,i);
		}
		public LexemsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lexems; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGrammarListener ) ((GrammarGrammarListener)listener).enterLexems(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGrammarListener ) ((GrammarGrammarListener)listener).exitLexems(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarGrammarVisitor ) return ((GrammarGrammarVisitor<? extends T>)visitor).visitLexems(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LexemsContext lexems() throws RecognitionException {
		LexemsContext _localctx = new LexemsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_lexems);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(TOKENS);
			setState(117);
			match(LB);
			setState(121); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(118);
				((LexemsContext)_localctx).li = nextLexem();
				_localctx.toks.add(((LexemsContext)_localctx).li.val);
				}
				}
				setState(123); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TERM );
			setState(125);
			match(RB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NextLexemContext extends ParserRuleContext {
		public MyToken val;
		public Token TERM;
		public Token REGEX;
		public TerminalNode TERM() { return getToken(GrammarGrammarParser.TERM, 0); }
		public TerminalNode DCOLON() { return getToken(GrammarGrammarParser.DCOLON, 0); }
		public TerminalNode REGEX() { return getToken(GrammarGrammarParser.REGEX, 0); }
		public TerminalNode SEMICOLON() { return getToken(GrammarGrammarParser.SEMICOLON, 0); }
		public NextLexemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nextLexem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGrammarListener ) ((GrammarGrammarListener)listener).enterNextLexem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGrammarListener ) ((GrammarGrammarListener)listener).exitNextLexem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarGrammarVisitor ) return ((GrammarGrammarVisitor<? extends T>)visitor).visitNextLexem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NextLexemContext nextLexem() throws RecognitionException {
		NextLexemContext _localctx = new NextLexemContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_nextLexem);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			((NextLexemContext)_localctx).TERM = match(TERM);
			setState(128);
			match(DCOLON);
			setState(129);
			((NextLexemContext)_localctx).REGEX = match(REGEX);
			setState(130);
			match(SEMICOLON);
